--- a/jwt/pom.xml
+++ b/jwt/pom.xml
@@ -3,40 +3,45 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.dqcer</groupId>
+        <artifactId>jtm-springboot</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>com.dqcer</groupId>
-    <artifactId>jtm-springboot</artifactId>
+    <artifactId>jwt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>jtm-springboot</name>
-    <description>Demo project for Spring Boot</description>
+    <name>jwt</name>
+    <description>springboot 整合jwt</description>
 
-
-
-    <properties>
-        <java.version>1.8</java.version>
-        <jjwt.version>0.9.0</jjwt.version>
-        <fastjson.version>1.2.54</fastjson.version>
-    </properties>
-
-    <modules>
-        <module>spring-retry</module>
-        <module>jwt</module>
-    </modules>
 
 
     <dependencies>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
